Overflow sidebar fixed

--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@
 
 .playlists ul{
     overflow-y: auto;
-    height: 30vh;
+    height: 25vh;
 }
 
 .margin-logo{
